format and such

--- a/app/views/home/joachim.html.erb
+++ b/app/views/home/joachim.html.erb
@@ -3,8 +3,11 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading">
-          JOACHIM ECKL (2018 Resident Artist)
+          JOACHIM ECKL - 2018 Resident Artist
         </h2>
+        <a href="http://www.heimart.at/index.php/joachim-eckl.html" target="_blank">
+          (website)
+        </a>
         <hr class="primary">
       </div>
     </div>
@@ -14,20 +17,51 @@
     <div class="row text-center">
       <div class="col-md-10 col-md-offset-1">
         <p class="">
-          Joachim Eckl lives and works in Unternberg near Neufelden at the river Große Mühl which is situated in the Mühlviertel, an area steeped in history and of powerful nature. His ancestors were millers working in the Berndlmühle upstream in Aigen-Schlägl. Through generations the family obtained power and energy from the Große Mühl. At first the energy was used to grind grain in the mills; after that for generating power in the power station. In 1902, his great-grandfather erected the first hydroelectric power station at the Große Mühl to “bring light to town”.
+          Joachim Eckl (Austria) lives and works in Unternberg near Neufelden at the river Große Mühl which is situated in the Mühlviertel, an area steeped in history and of powerful nature. His ancestors were millers working in the Berndlmühle upstream in Aigen-Schlägl. Through generations the family obtained power and energy from the Große Mühl. At first the energy was used to grind grain in the mills; after that for generating power in the power station. In 1902, his great-grandfather erected the first hydroelectric power station at the Große Mühl to “bring light to town”.
         </p>
         <p>
-          Joachim Eckl was born and brought up in 1962 in Haslach on that river. The relation to his country and culture as well as the local particularities became important for Eckl after his returning from studying in New York in 1989. His commitment and work is based on the conviction and knowledge that the achievements of the 20th century entailed progress but also an immoderate carelessness: for Eckl, the time has come to return something to the river and the region. After his studies of psychology in Austria and New York, Eckl has worked for over 20 years in various positions and roles in the art world. In parallel to the realization of over 100 of his own projects, he was part of the implementation of the large-scale projects of Tony Cragg, Jeff Koons, Christo & Jean Claude, and Klaus Rinke. Eckl currently works as a freelance artist under the label HEIM.ART® in “Der Station—Neufelden” and as part of international projects. Run by Eckl, “Die Station—Neufelden”, the former warehouse on the Große Mühl, has been used as an art space for over 10 years. 
+          Joachim Eckl was born and brought up in 1962 in Haslach. The relation to his country and culture as well as the local particularities became important for Eckl after he returned from studying in New York in 1989. His commitment and work is based on the conviction and knowledge that the achievements of the 20th century entailed progress but also an immoderate carelessness: for Eckl, the time has come to return something to the river and the region. After his studies of psychology in Austria and New York, Eckl has worked for over 20 years in various positions and roles in the art world. In parallel to the realization of over 100 of his own projects, he was part of the implementation of the large-scale projects of Tony Cragg, Jeff Koons, Christo & Jean Claude, and Klaus Rinke. Eckl currently works as a freelance artist under the label HEIM.ART® in “Der Station—Neufelden” and as part of international projects. Run by Eckl, “Die Station—Neufelden”, the former warehouse on the Große Mühl, has been used as an art space for over 10 years. 
         </p>
         <p>
-          Joachim Eckl’s work is based on an extended understanding of art which is substantially inspired by Joseph Beuys’ term ‘social sculpture’. Eckl generates impulses for social sculptures through the creation of joint experiences. He regards himself as a ‘social engineer’. Water plays a central role in this work: Eckl understands and uses it as basic element of human interaction. His project river to river currently brings together rivers and people from all over the world, generating social warmth. In the years 2008—2009, he realized projects in Austria, the Czech Republic, Germany, Great Britain, Egypt, Zambia, and Zimbabwe.
+          Joachim Eckl’s work is based on an extended understanding of art which is substantially inspired by Joseph Beuys’ term ‘social sculpture’. Eckl generates impulses for social sculptures through the creation of joint experiences. He regards himself as a ‘social engineer’. Water plays a central role in this work: Eckl understands and uses it as basic element of human interaction. His project 'river-to-river' currently brings together rivers and people from all over the world, generating social warmth. In the years 2008—2009, he realized projects in Austria, the Czech Republic, Germany, Great Britain, Egypt, Zambia, and Zimbabwe.
         </p>
+        <br />
         <hr class="primary">
+        <p> PROJECTS </p>
+        <hr class="primary">
+
+        <br />
+        <h4>
+          "​FLUSSAUFWAERTS"
+        </h4>
+        <br />
         <p>
-          One of the most expansive projects undertaken by Eckl is “Brëckenschlag - Donau - Schöpfung” / “Draw the Danube - Build a Bridge”. Below is his brief concept description:
+          A project realized several years ago by Joachim Eckl and Michael Pisaro. <a href="http://www.flussaufwaertstreiben.net/index.html" target="_blank"> (link) </a>
         </p>
         <p>
-          “From its origin in the Black Forest to the end of its journey in the Black Sea, the Danube river flows for more than 2880 km (roughly 1740 miles) and traverses ten European states. Drawing 'stations' will be set up every 10 kilometers along the entire course of the river. On August 17th, 2018, at a specific time and for one hour, around 2000 people gathered at these 280 stations will collect water into containers, about 1000 liters per drawing station. Filling the containers will take about as long as it would take the water to flow from one station to the next, thus capturing an instant of the entire river course in one single collective action of awareness. The water extracted from the river will be collected in the 'DanubeTrain' set up in Linz at the Donaulände park. This convoy will then travel upriver to Donaueschingen, where the 280 water containers will be combined into a well from which the drawn water will flow for six days until all of it has returned to the river—and with it the creative energy of all the people that participated in this project. The social sculpture Draw the Danube - Build a Bridge brings together people from the most diverse cultures, acting freely and collectively in a border-crossing project. The communal contact with the river, with water, arouses man's primal relationship with nature.”
+          ​​FLUSSAUFWAERTS is a long-term exploration of the sounding environments along the Grosse Mühl river in Oberösterreich, starting in Neufelden and working our way downstream to where the river joins​ ​the Danube. 
+        </p>
+        <p>
+          The locations are oriented around accessible spaces along the Grosse Mühl. The yearly movement is downstream, but the movement from location to location in each particular​ ​year is upstream.
+        </p>
+        <p>
+          The entire installation will last one week in the Summer each year.​ ​Each year six locations will be selected within walking distance from each other. ​​At every station, we will set up a sheltered listening area with a pair of speakers.​ ​Over the course of the week, the areas will be open for any listeners and also for exploration by the invited performers.​ ​Recordings at each location will be made every day.
+        </p>
+        <p>
+          In the late afternoon (from 15:00 to 17:00) a walk upstream following all six stations will be scheduled, with events at each station.​ ​(The events last 12 minutes at each station, followed by eight minutes to arrive at the next location.)​. ​The musicians involved are drawn from the Wandelweiser collective.​ ​Over time each will be involved as performer and composer. ​​
+        </p>
+        <p>
+          This project is tightly connected to the sounding environment and thus the collective perception of the people of the region. It is an opportunity to experience discrete, but perceptible change in our environment through the lens of the Grosse Mühl.​
+        </p>
+        <br />
+        <hr class="primary">
+        <br />
+        <h4>
+          “Brëckenschlag - Donau - Schöpfung” / “Draw the Danube - Build a Bridge”
+        </h4>
+        <br />
+        <p>
+          Concept description: “From its origin in the Black Forest to the end of its journey in the Black Sea, the Danube river flows for more than 2880 km (roughly 1740 miles) and traverses ten European states. Drawing 'stations' will be set up every 10 kilometers along the entire course of the river. On August 17th, 2018, at a specific time and for one hour, around 2000 people gathered at these 280 stations will collect water into containers, about 1000 liters per drawing station. Filling the containers will take about as long as it would take the water to flow from one station to the next, thus capturing an instant of the entire river course in one single collective action of awareness. The water extracted from the river will be collected in the 'DanubeTrain' set up in Linz at the Donaulände park. This convoy will then travel upriver to Donaueschingen, where the 280 water containers will be combined into a well from which the drawn water will flow for six days until all of it has returned to the river—and with it the creative energy of all the people that participated in this project. The social sculpture Draw the Danube - Build a Bridge brings together people from the most diverse cultures, acting freely and collectively in a border-crossing project. The communal contact with the river, with water, arouses man's primal relationship with nature.”
         </p>
       </div>
     </div>
