--- a/app/views/home/sections/_intro2018.html.erb
+++ b/app/views/home/sections/_intro2018.html.erb
@@ -14,7 +14,7 @@
     <div class="row text-center">
       <div class="col-md-10 col-md-offset-1">
         <p class="">
-          The second season of the `co-incidence festival` will take place from January 19—28, 2018, at Washington Street Art Center in Somerville, MA. as with last year, the overarching goal of the festival is to bring together experimental composer/performers/artists to focus on collaboration, critical discussion, workshopping, and performance. In 2018, this will last 7 full days (not including arrival and departure days). The festival is directed by experimental composer/performers aaron foster breilyn and luke martin.
+          The second season of the `co-incidence festival` will take place from January 19—28, 2018, at Washington Street Art Center in Somerville, MA. as with last year, the overarching goal of the festival is to bring together experimental composer/performers/artists to focus on collaboration, critical discussion, workshopping, and performance. In 2018, this will last 8 full days (not including arrival and departure days). The festival is directed by experimental composer/performers aaron foster breilyn and luke martin.
         </p>
         <p>
           Though we have general conceptual areas that we would like to explore during the festival, we are open (and eager) to expand from there and allow the attending artists' constellations of concepts to influence the direction of the festival. We begin with an interest in the concept of the 'swarm' or 'flock'. Within this, we are concerned with an understanding of social composition and sonic composition as acts inseparable from one another, unfinished (or impossible-to-finish) works that develop during the festival, power relations among the group and beyond, a consideration of place, silence and the act of listening, critical discussion, and collaborative composition.
@@ -22,14 +22,35 @@
         <p>
           We are extremely pleased to announce that interdisciplinary artist / ‘social engineer’ <a href="http://www.heimart.at/index.php/joachim-eckl.html" target="_blank">Joachim Eckl</a> will be our Resident Artist for 2018. This position was held by Michael Pisaro in 2017 and we expect Joachim to bring yet another important perspective and artistic focus to the festival.
         </p>
-        <!-- <hr class="primary">
+        <hr class="primary">
         <p>
-          You can read more about last year's festival in the 
-          <a href="http://www.bostonglobe.com/arts/music/2017/01/25/all-hands-deck-experimental-music-fest-somerville/41ygk4NGqSzHe72ir86v1I/story.html?s_campaign=bostonglobe%3Asocial%3Agoogleamp%3Asharetools" target="_blank">
-            Boston Globe
-          </a>
-          .
-        </p> -->
+          More information on the 2018 season to be provided on September 1.
+        </p>
+        <br />
+        <hr class="tertiary">
+        <br />
+        <p> Timeline: </p>
+        <div class="row">
+          <div class="col-xs-6 col-xs-offset-3 text-left">
+            <ul>
+              <li>
+                <b>September 1</b> - Applications Open
+              </li>
+              <li>
+                <b>October 29</b> - Applications Close
+              </li>
+              <li>
+                <b>November 6</b> - Results Sent
+              </li>
+              <li>
+                <b>Mid-November</b> - Guest Artists Announced
+              </li>
+              <li>
+                <b>January 19-28, 2018</b> - Festival
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
   </div>
