--- a/app/views/home/sections/_partners.html.erb
+++ b/app/views/home/sections/_partners.html.erb
@@ -72,12 +72,12 @@
             <%= image_tag asset_url("joachim.jpg") %>
           </div>
           <p class="text-muted partner-link">
-            <a href="http://www.heimart.at/index.php/joachim-eckl.html" target="_blank">
+            <a href="/joachim">
               Joachim Eckl
             </a>
           </p>
           <p>
-            Based in Austria, Joachim Eckl was brought up in Haslach on the Große Mühl river. The relation to his country and culture as well as the local particularities became important for Eckl after returning from his studies in psychology in New York. Joachim Eckl’s work is based on an extended understanding of art which is substantially inspired by Joseph Beuys’ term ‘social sculpture’. Eckl generates impulses for social sculptures through the creation of joint experiences. He regards himself as a ‘social engineer’. Water also plays a central role in this work: he understands and uses it as basic element of human interaction. Eckl currently works as a freelance artist under the label HEIM.ART® and runs “Die Station—Neufelden”, a former warehouse on the Große Mühl, as an art space.
+            Based in Austria, Joachim Eckl was brought up in Haslach on the Große Mühl river. Joachim Eckl’s work is based on an extended understanding of art which is substantially inspired by Joseph Beuys’ term ‘social sculpture’. Eckl generates impulses for social sculptures through the creation of joint experiences. He regards himself as a ‘social engineer’. Water also plays a central role in this work: he understands and uses it as basic element of human interaction. Eckl currently works as a freelance artist under the label HEIM.ART® and runs “Die Station—Neufelden”, a former warehouse on the Große Mühl, as an art space.
           </p>
           --
           <p>
