--- a/app/assets/stylesheets/mine.scss
+++ b/app/assets/stylesheets/mine.scss
@@ -148,3 +148,13 @@ h5 {
 .tertiary {
   border-color: #F05F40;
 }
+
+.my-text-area {
+  width: 100% !important;
+  height: 100px !important;
+  resize: none;
+}
+
+.form2 {
+  width: 100% !important;
+}
