--- a/app/views/home/sections/_intro2018.html.erb
+++ b/app/views/home/sections/_intro2018.html.erb
@@ -26,7 +26,7 @@
         <p>
           More information on the 2018 season to be provided on September 1.
         </p>
-        <br />
+        <!-- <br />
         <hr class="tertiary">
         <br />
         <p> Timeline: </p>
@@ -50,7 +50,7 @@
               </li>
             </ul>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
