--- a/app/views/home/sections/_about.html.erb
+++ b/app/views/home/sections/_about.html.erb
@@ -19,7 +19,7 @@
               Aaron
             </a>
           </span>
-           had a far too grandiose idea: "let's do our own music festival!" (Un)fortunately, they don't know when to stop. And here we are, with the co-incidence festival which kicked off it's first season in January 2017. We wanted to fill a perceived gap in support for experimental composer/performers in the U.S. with a music festival focused on experimental music and built as an experimental composer might build a piece.
+           had a far too grandiose idea: "let's do our own music festival!" (Un)fortunately, they don't know when to stop. And here we are, with the co-incidence festival which kicked off its first season in January 2017. We wanted to fill a perceived gap in support for experimental composer/performers in the U.S. with a music festival focused on experimental music and built as an experimental composer might build a piece.
            <br />
            <br />
            You can check out our article in the
