adds into to announcement and new header items

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,6 +17,12 @@
           <a class="page-scroll" href="#about">About</a>
         </li> -->
         <li>
+          <a class="page-scroll" href="/home/#application">APPLICATION</a>
+        </li>
+        <li>
+          <a class="page-scroll" href="/home/#intro2018">2018 SEASON</a>
+        </li>
+        <li>
           <a class="" href="2017-season">2017 SEASON</a>
         </li>
         <li>
