--- a/app/views/home/sections/_intro2018.html.erb
+++ b/app/views/home/sections/_intro2018.html.erb
@@ -14,20 +14,16 @@
     <div class="row text-center">
       <div class="col-md-10 col-md-offset-1">
         <p class="">
-          The second season of the `co-incidence festival` will take place from January 19—28, 2018, at Washington Street Art Center in Somerville, MA. as with last year, the overarching goal of the festival is to bring together experimental composer/performers/artists to focus on collaboration, critical discussion, workshopping, and performance. In 2018, this will last 8 full days (not including arrival and departure days). The festival is directed by experimental composer/performers aaron foster breilyn and luke martin.
+          The second season of the `co-incidence festival` will take place from January 19—28, 2018, at Washington Street Art Center in Somerville, MA. As with last year, the overarching goal of the festival is to bring together experimental composer/performers/artists to focus on collaboration, critical discussion, workshopping, and performance. In 2018, this will last 8 full days (not including arrival and departure days). The festival is directed by experimental composer/performers aaron foster breilyn and luke martin.
         </p>
         <p>
-          Though we have general conceptual areas that we would like to explore during the festival, we are open (and eager) to expand from there and allow the attending artists' constellations of concepts to influence the direction of the festival. We begin with an interest in the concept of the 'bridge', the 'swarm', and 'social sculpture'. These concepts can be found within one another as well as growing into one another (bridge to swarm to sculpture). The bridge becomes the swarm becomes social sculpture; yet the swarm is always implied by the bridge just as social sculpture is implied by both.
+          Though we have general conceptual areas that we would like to explore during the festival, we are open (and eager) to expand from there and allow the attending artists' constellations of concepts to influence the direction of the festival. We begin with an interest in the 'bridge', the 'swarm', and 'social sculpture'. These concepts can be found within one another as well as growing into one another (bridge to swarm to sculpture). The bridge becomes the swarm becomes social sculpture; yet the swarm is always implied by the bridge just as social sculpture is implied by both.
         </p>
         <p>
           Common to all of these processes is the act of listening. The 'bridge', 'swarm', and 'social sculpture' all arise from different modes of listening; namely: 1) listening to things, hearing their minute, ordinary, explosive sounds, building a relationship with their sounds, yours, and those of the environment; 2) listening into things, hearing potential meanings, listening past the sounds, balancing this listening with that of the first (prior) order; 3) listening to an inner voice(s), a moral listening/judgement, energy flowing between inside and outside.
         </p>
         <p>
           We are extremely pleased to announce that interdisciplinary artist / ‘social engineer’ <a href="http://www.heimart.at/index.php/joachim-eckl.html" target="_blank">Joachim Eckl</a> will be our Resident Artist for 2018. This position was held by Michael Pisaro in 2017 and we expect Joachim to bring yet another important perspective and artistic focus to the festival.
-        </p>
-        <hr class="primary">
-        <p>
-          More information on the 2018 season to be provided on September 1.
         </p>
         <!-- <br />
         <hr class="tertiary">
