--- a/app/views/home/sections/_logos.html.erb
+++ b/app/views/home/sections/_logos.html.erb
@@ -8,6 +8,9 @@
     </div>
     <div class="row text-center">
         <div class="business-logo">
+            <%= image_tag asset_url("business-logos/Amphion4.png") %>
+        </div>
+        <div class="business-logo">
           <%= image_tag asset_url("business-logos/bcc.jpg") %>
         </div>
         <div class="business-logo">
