get rid to 2x jesus nap

--- a/app/views/home/sections/_description.html.erb
+++ b/app/views/home/sections/_description.html.erb
@@ -6,7 +6,7 @@
           ABOUT
         </h2> -->
         <p class="text-faded">
-          <i>the co-incidence festival </i>is a gathering of experimental composer-performers for six days hosted by Non-Event at Washington Street Gallery in Somerville, MA.
+          <i>the co-incidence festival </i>is a gathering of experimental composer-performers hosted by Non-Event at Washington Street Gallery in Somerville, MA.
         </p>
         <hr class="light">
         <p class="text-faded">
