adds warning about safari

--- a/app/views/home/sections/_application2.html.erb
+++ b/app/views/home/sections/_application2.html.erb
@@ -82,6 +82,8 @@
     <div class="row text-center">
       <p>
         * Please note: you cannot save your progress in this form. *
+        <br />
+        * There is a known issue submitting this form on Safari. If possible, please use Chrome. *
       </p>
     </div>
 
