get rid of birthday

--- a/app/views/home/sections/_application2.html.erb
+++ b/app/views/home/sections/_application2.html.erb
@@ -110,8 +110,8 @@
           </h3>
 
           <br />
-          <%= f.label :birthday, :required => true, class: 'fugu-width m-5-top' %>
-          <%= f.date_field :birthday, class: 'form-control form2 m-5-top', :required => true %>
+          <%#= f.label :birthday, :required => true, class: 'fugu-width m-5-top' %>
+          <%#= f.date_field :birthday, class: 'form-control form2 m-5-top', :required => true %>
           <br />
           <%= f.label :address, :required => true, class: 'fugu-width m-5-top' %>
           <%= f.text_area :address, class: 'form-control form2 m-5-top', :required => true %>
