--- a/app/assets/stylesheets/mine.scss
+++ b/app/assets/stylesheets/mine.scss
@@ -133,8 +133,9 @@ h5 {
 
 .business-logo {
   height: 50px;
-  padding-left: 15px;
-  padding-right: 15px;
+  margin-top: 15px;
+  padding-left: 24px;
+  padding-right: 24px;
   display: inline-block;
   img {
     -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
