--- a/app/views/home/sections/_logos.html.erb
+++ b/app/views/home/sections/_logos.html.erb
@@ -14,10 +14,13 @@
           <%= image_tag asset_url("business-logos/bcc.jpg") %>
         </div>
         <div class="business-logo">
+          <%= image_tag asset_url("business-logos/mcc-logo.jpg") %>
+        </div>
+        <div class="business-logo">
           <%= image_tag asset_url("business-logos/cafefixe.png") %>
         </div>
         <div class="business-logo">
-          <%= image_tag asset_url("business-logos/mcc-logo.jpg") %>
+            <%= image_tag asset_url("business-logos/austrian-logo.png") %>
         </div>
         <div class="business-logo">
           <%= image_tag asset_url("business-logos/SAC_black300dpi.jpg") %>
